Fabric model added